--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Maintenance | Korobi</title>
-    <link rel="stylesheet" href="assets/css/application.css?v=411df02">
+    <link rel="stylesheet" href="/assets/css/application.css?v=411df02">
 </head>
 <body>
     <div id="maintenance">
