:crying_cat_face:

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 <body>
     <div id="maintenance">
         <h1>Korobi is temporarily unavailable</h1>
-        <p>Sorry, our website is temporarily unavailable due to a lack of resources.</p>
-        <p>We're continuing to collect and maintain our database of logs in the meantime and all bot functionality should continue to work.</p>
-        <p>If you're able to provide server hardware or <a href="https://www.paypal.com/uk/cgi-bin/webscr?cmd=_xclick&amp;business=kashike@vq.lc">donate</a> it would be greatly appreciated.</p>
+        <p>Sorry, Korobi is temporarily unavailable due to a lack of resources.</p>
         <p class="visit-us">
             <small>
                 Feel free to visit us at irc.esper.net, in the channel #korobi for more information.
