--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Maintenance | Korobi</title>
+    <title>Shutdown | Korobi</title>
     <link rel="stylesheet" href="/assets/css/application.css?v=411df02">
 </head>
 <body>
     <div id="maintenance">
-        <h1>Korobi is temporarily unavailable</h1>
-        <p>Sorry, Korobi is temporarily unavailable due to a lack of resources.</p>
+        <h1>Korobi has been shutdown</h1>
+        <p>Due to a lack of time and resources Korobi has been shutdown.</p>
         <p class="visit-us">
             <small>
                 Feel free to visit us at irc.esper.net, in the channel #korobi for more information.
